facebook old layout

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 				<a href="#" title="Visit out Help Centre">Help</a>
 			</div>
 			<div class="mepart">
-				<p>Facebook clone by: <a href="http://m.facebook.com/mrmasud.me">Masud</a> </p>
+				<p>Facebook clone by: <a href="http://m.facebook.com/zuccedmasud">Masud</a> </p>
 			</div>
 		</div>
 	</div>
